--- a/server/docker/dev/docker-compose.yml
+++ b/server/docker/dev/docker-compose.yml
@@ -5,7 +5,8 @@ services:
       context: ../../
       dockerfile: docker/dev/Dockerfile
     env_file: .env
-    command: tail -F /dev/null
+    # command: tail -F /dev/null
+    tty: true
     volumes:
       - "../../:/home/node/server"
       - /home/node/server/node_modules
