--- a/server/package.json
+++ b/server/package.json
@@ -6,18 +6,29 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "tsc -w",
-    "watch-server": "nodemon --watch lib --delay 2 lib/index.js"
+    "tsc:watch": "tsc -w",
+    "server:watch": "nodemon --watch lib lib/index.js",
+    "dev": "run-p *:watch",
+    "orm": "typeorm",
+    "prod": "tsc && node ."
   },
   "dependencies": {
     "@tinyhttp/app": "^1.3.8",
+    "@tinyhttp/rate-limit": "^1.3.0",
+    "body-parser": "^1.19.0",
+    "express-validator": "^6.12.0",
+    "node-fetch": "^2.6.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.0.0",
     "typeorm": "^0.2.34",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/node": "^15.12.2",
-    "nodemon": "^2.0.7"
+    "@types/node-fetch": "^2.5.10",
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5"
   }
 }
