--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -11,6 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: 5.0.0
+  google_maps_flutter: 2.0.6
+  http: 0.13.3
 
 dev_dependencies:
   flutter_test:
