--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -15,6 +15,8 @@ dependencies:
   google_maps_flutter: 2.0.6
   retrofit: 2.0.0
   json_serializable: 4.1.3
+  rxdart: 0.27.1
+  snapping_sheet: 3.1.0
 
 dev_dependencies:
   flutter_test:
