--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -17,18 +17,21 @@ dependencies:
   json_serializable: 4.1.3
   rxdart: 0.27.1
   snapping_sheet: 3.1.0
+  permission_handler: 8.1.1
+  location: 4.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   retrofit_generator: 2.0.0+1
-  build_runner: ^2.0.4
+  build_runner: 2.0.4
 
 flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
